--- a/.github/workflows/docker-aliyun.yml
+++ b/.github/workflows/docker-aliyun.yml
@@ -40,8 +40,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: crpi-4z4v1n5g8hbg9g3x.cn-hangzhou.personal.cr.aliyuncs.com
-          username: ${{ secrets.ALIYUN_REGISTRY_USERNAME }}
-          password: ${{ secrets.ALIYUN_REGISTRY_PASSWORD }}
+          username: ${{ secrets.ALIYUN_DOCKER_USER }}
+          password: ${{ secrets.ALIYUN_DOCKER_TOKEN }}
 
       - name: 提取元数据 (标签)
         id: meta
