--- a/.github/workflows/docker-aliyun.yml
+++ b/.github/workflows/docker-aliyun.yml
@@ -1,14 +1,15 @@
 name: 发布 Docker 镜像到阿里云
 
 on:
+  workflow_dispatch:  # Manual trigger
   push:
     tags:
-      - '*'
-  workflow_dispatch:
-    inputs:
-      name:
-        description: "原因"
-        required: false
+      - 'v*'
+    branches:
+      - main
+    paths:
+      - '**'
+      - '.github/workflows/docker-aliyun.yml'
 
 jobs:
   build_and_push:
@@ -25,13 +26,24 @@ jobs:
         with:
           fetch-depth: 1
 
-      - name: 解析标签并写入 VERSION
+      - name: 获取版本信息
+        id: version
         run: |
-          git fetch --tags --force --depth=1
-          TAG=${GITHUB_REF#refs/tags/}
-          echo "TAG=$TAG" >> $GITHUB_ENV
-          echo "$TAG" > VERSION
-          echo "构建标签版本: $TAG"
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+            # 推送 tag 触发 (如 v1.0.1)
+            VERSION=${GITHUB_REF#refs/tags/}
+            echo "VERSION=$VERSION" >> $GITHUB_ENV
+            echo "IS_TAG=true" >> $GITHUB_ENV
+            echo "✅ 版本来自 tag: $VERSION"
+          else
+            # 推送 main 分支触发，使用 commit SHA 前7位
+            COMMIT_SHA=$(git rev-parse --short HEAD)
+            VERSION="dev-${COMMIT_SHA}"
+            echo "VERSION=$VERSION" >> $GITHUB_ENV
+            echo "IS_TAG=false" >> $GITHUB_ENV
+            echo "✅ 版本来自 commit: $VERSION"
+          fi
+          echo "$VERSION" > VERSION
 
       - name: 设置 Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -57,10 +69,14 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            crpi-4z4v1n5g8hbg9g3x.cn-hangzhou.personal.cr.aliyuncs.com/beilv-agent/new-api:${{ env.TAG }}
             crpi-4z4v1n5g8hbg9g3x.cn-hangzhou.personal.cr.aliyuncs.com/beilv-agent/new-api:latest
+            crpi-4z4v1n5g8hbg9g3x.cn-hangzhou.personal.cr.aliyuncs.com/beilv-agent/new-api:${{ env.VERSION }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           provenance: false
           sbom: false
+          build-args: |
+            VERSION=${{ env.VERSION }}
+            BUILD_DATE=${{ github.event.head_commit.timestamp }}
+            VCS_REF=${{ github.sha }}
